2006-07-11  Derek Price  <derek@ximbiot.com>

	* system.h: Ignore obsolescent !HAVE_DIRENT_H and HAVE_DIRECT_H cases.

2006-07-10  Jim Hyslop <jhyslop@dreampossible.ca>

	* libcvs.dep: Fixed relative directories in file

2006-07-07  Derek Price  <derek@ximbiot.com>

	* system.h [!HAVE_DIRENT_H && !HAVE_NDIR_H]: Ignore this obsolescent
	case.

2006-07-06  Derek Price  <derek@ximbiot.com>

	* fnmatch.c, fnmatch_loop.c, getcwd.c, getdate.c, getdate.y, getopt.c,
	getpagesize.h, glob.c, regex_internal.h, strftime.c: Update from
	GNULIB.

2006-07-06  Jim Hyslop <jhyslop@dreampossible.ca>

	* getaddrinfo.c: changed '#if WIN32_NATIVE' to '#ifdef' to allow it
	to compile in MSVC

	* getaddrinfo.c:
	  - Fixed a second compile problem: moved WSAAPI macro
	    inside brackets.
	  - Minor changes to suppress some compiler warnings.

	* fnmatch.c: if ISUPPER isn't defined, then define it.

	* libcvs.dsp: Added new files (inet_ntop.*, snprintf.*, strndup.*,
	strnlen.*, xstrndup.*)
	* libcvs.dep, libcvs.mak: regenerated

2006-07-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Import changes from...
	* Makefile.gnulib: ...this regenerated file.
	* exit.h, fnmatch.c, fnmatch_loop.c, getaddrinfo.c, getaddrinfo.h,
	getdate.c, getdate.y, strtol.c: Update from GNULIB.
	* snprintf.c, snprintf.h: New files from GNULIB.

2006-07-05  Derek Price  <derek@ximbiot.com>

	* same-inode.h, strndup.c, strndup.h, strnlen.c, strnlen.h, xstrndup.c,
	xstrndup.h: New file from GNULIB.
	* Makefile.am: Move changes from...
	* Makefile.gnulib: ...this regenerated file.
	* basename.c, cycle-check.c, cycle-check.h, dirname.c, dirname.h,
	filenamecat.c, getcwd.c, inttypes.h, stat-macros.h, stat_.h, stdint_.h,
	stripslash.c: Update from GNULIB.

2006-07-03  Mark D. Baushke  <mdb@gnu.org>

	* stdint_.h: Fork stdint_.h to work on MacOS X 10.4.x.

2006-07-02  Derek Price  <derek@ximbiot.com>

	* Makefile.gnulib, stdint_.h: Update from GNULIB.
	* Makefile.am: Update to match Makefile.gnulib.
